# ESG-Sentimental-Trading

./: .env.example  .gitignore  ACTION_CHECKLIST.md  ACTION_ITEMS.md  ADVANCED_SENTIMENT_METHODOLOGY.md  ALTERNATIVE_DATA_SOURCES.md  BACKTEST_ANALYSIS_ROOT_CAUSE.md  BACKTEST_PROMPT.md  BUGFIX_REPORT.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CRITICAL_BUGS_FIXED_SUMMARY.md  CRITICAL_BUG_FIX_2.md  DOCUMENTATION.md  GETTING_STARTED.md  IMPLEMENTATION_SUMMARY.md  INSTALL.md  INSTITUTIONAL_GRADE_SUMMARY.md  LICENSE  NEXT_STEPS.md  OPTIMIZATION_NOTES.md  PERFORMANCE_METRICS_GUIDE.md  PRODUCTION_SETUP.md  PROJECT_PLAN.md  PROJECT_SUMMARY.md  QUANT_AUDIT_REPORT.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  RISK_IMPROVEMENTS_SUMMARY.md  RISK_MANAGEMENT.md  THESIS_IMPROVEMENTS.md  TWITTER_SETUP.md  dashboard.py  debug_keeptrack.md  debug_prices.py  main.py  monitor_backtest.py  pyproject.toml  requirements.txt  (+4 more)
.github/: PULL_REQUEST_TEMPLATE.md
CHECKLIST/: ACTION_CHECKLIST.md  ESG_UNIVERSE_GUIDE.md  PRODUCTION_DEPLOYMENT.md
archive/: demo_enhanced_metrics.py
config/: config.yaml  esg_keywords.json
data/: events_2024-01-01_to_2025-11-10.pkl  events_2024-02-01_to_2025-11-10.pkl  events_2024-08-01_to_2024-10-01.pkl  events_2024-08-01_to_2024-11-01.pkl  events_2024-08-15_to_2024-08-25.pkl  events_2024-09-01_to_2024-11-10.pkl  events_2025-08-01_to_2025-11-01.pkl  filings_2024-01-01_to_2024-11-01.pkl  filings_2024-01-01_to_2025-11-10.pkl  filings_2024-02-01_to_2025-11-10.pkl  filings_2024-08-01_to_2024-11-01.pkl  filings_2024-08-15_to_2024-08-25.pkl  filings_2024-09-01_to_2024-11-10.pkl  filings_2024-09-01_to_2024-12-31.pkl  filings_2025-08-01_to_2025-11-01.pkl  portfolio_2024-01-01_to_2025-11-10.csv  portfolio_2024-02-01_to_2025-11-10.csv  portfolio_2024-08-01_to_2024-10-01.csv  portfolio_2024-08-01_to_2024-11-01.csv  portfolio_2025-08-01_to_2025-11-01.csv  prices_2024-08-01_to_2024-10-01.pkl  prices_2024-08-01_to_2024-11-01.pkl  prices_2024-08-15_to_2024-08-25.pkl  prices_2024-09-01_to_2024-11-10.pkl  prices_2024-09-01_to_2024-12-31.pkl  signals_2024-01-01_to_2025-11-10.csv  signals_2024-02-01_to_2025-11-10.csv  (+9 more)
src/: __init__.py
(+81 files in other folders)
