[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "esg-sentimental-trading"
version = "4.1.0"
description = "ESG sentiment-driven equity trading strategy using SEC filings, Reddit, and Twitter data"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Chuyue Wang"},
]
keywords = ["esg", "sentiment-analysis", "trading", "nlp", "finance", "backtesting"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy==1.24.3",
    "pandas==2.0.2",
    "scipy==1.10.1",
    "scikit-learn==1.3.0",
    "yfinance==0.2.28",
    "pandas-datareader==0.10.0",
    "sec-edgar-downloader==5.0.3",
    "beautifulsoup4==4.12.2",
    "lxml==4.9.3",
    "requests==2.31.0",
    "tweepy==4.14.0",
    "statsmodels==0.14.0",
    "pyyaml==6.0",
    "tqdm==4.65.0",
    "python-dotenv==1.0.0",
    "matplotlib==3.7.1",
    "seaborn==0.12.2",
    "plotly==5.18.0",
]

[project.optional-dependencies]
nlp = [
    "transformers==4.30.2",
    "torch==2.0.1",
]
dashboard = [
    "streamlit==1.29.0",
]
dev = [
    "pytest==7.3.1",
    "pytest-cov==4.1.0",
]

[project.urls]
Homepage = "https://github.com/your-username/ESG-Sentimental-Trading"
Repository = "https://github.com/your-username/ESG-Sentimental-Trading"
Issues = "https://github.com/your-username/ESG-Sentimental-Trading/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.setuptools.packages.find]
include = ["src*"]
